
0.2

features:
 * change numeration version
 * applied some PEP8 rules, fix typos and reorganize code
 * aplied color text in console information for errors, warnings and process 

bugfixes:
 * fix "Segmentation fault" in plt.close() using pyplot
 * show and info error when found wrong line or garbage character in input files
 * fix crash when the name or number from files (station list and files 
   variables input) contain spaces or tabs at the start or/and final of this.